release-data/changelogs/9.0/plugins/benchmark-cis-ubuntu-24-04.adoc
= Changelogs for Rudder plugin benchmark-cis-ubuntu-24-04 9.0.\* versions

== benchmark-cis-ubuntu-24-04-9.0.9-0.10 (2026-08-06)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 9.0 series and therefore all installations of 9.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== benchmark-cis-ubuntu-24-04-9.0.8-0.10 (2026-07-12)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 9.0 series and therefore all installations of 9.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== benchmark-cis-ubuntu-24-04-9.0.7-0.10 (2026-06-12)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 9.0 series and therefore all installations of 9.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== benchmark-cis-ubuntu-24-04-9.0.6-0.10 (2026-05-04)

=== Changes


=== Bug fixes

=== Release notes

This is a bug fix release in the 9.0 series and therefore all installations of 9.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== benchmark-cis-ubuntu-24-04-9.0.5-0.10 (2026-04-02)

=== Changes


=== Bug fixes

==== Miscellaneous

* Fixed: Missing Ubuntu 24.04 benchmark from tests
    (https://issues.rudder.io/issues/28544[#28544])

=== Release notes

This is a bug fix release in the 9.0 series and therefore all installations of 9.0.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

