release-data/changelogs/9.2/plugins/benchmark-cis-ubuntu-24-04.adoc
= Changelogs for Rudder plugin benchmark-cis-ubuntu-24-04 9.2.\* versions

== benchmark-cis-ubuntu-24-04-9.2.0.beta1-0.10 (2026-08-31)

=== Changes


=== Bug fixes

==== Miscellaneous

* Fixed: webapp non-root: fix postinst for CIS plugins
    (https://issues.rudder.io/issues/29593[#29593])
* Fixed: Add set -e to shell scripts in rudder-plugins-private
    (https://issues.rudder.io/issues/29570[#29570])

=== Release notes

This is a bug fix release in the 9.2 series and therefore all installations of 9.2.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

== benchmark-cis-ubuntu-24-04-9.2.0.alpha1-0.10 (2026-07-20)

=== Changes


==== Miscellaneous

* Benchmark derivation
    (https://issues.rudder.io/issues/28918[#28918])

=== Bug fixes

==== Miscellaneous

* Fixed: webapp non-root: fix postinst in rudder-plugins-private
    (https://issues.rudder.io/issues/29158[#29158])

=== Release notes

This is a bug fix release in the 9.2 series and therefore all installations of 9.2.x should be upgraded when possible. When we release a new version of Rudder it has been thoroughly tested, and we consider the release enterprise-ready for deployment.

